[metadata]
name = ghbin
url = https://github.com/afriemann/ghbin
author = Aljosha Friemann
author_email = aljosha.friemann@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
platforms = linux
license_file = LICENSE.txt
classifiers =
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
setup_requires=
  setuptools_scm
install_requires =
  click
  simple_tools
  requests
  ruamel.yaml
  coloredlogs
  termcolor

[options.packages.find]
exclude =
  tests

[options.package_data]
* = *.txt, *.md, *.rst

[isort]
known_first_party =
  ghbin
